fix: update images gap for responsive

--- a/components/common/corporate-governance-and-investor-relations/cgir.module.scss
+++ b/components/common/corporate-governance-and-investor-relations/cgir.module.scss
@@ -140,9 +140,10 @@
         }
       }
     }
-    
+
     @media (max-width: $breakPoint-mobile) {
       padding-bottom: 100px;
+      gap: 24px;
     }
   }
   .back-block {
